Add optional texter for local pickup

--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,16 @@
   "license": "LGPL-3.0+",
   "type": "thelia-module",
   "require": {
-    "thelia/installer": "~1.1"
+    "thelia/installer": "~1.1",
+    "giggsey/libphonenumber-for-php": "^8.10",
+    "symfony/notifier": "6.4.*"
   },
   "extra": {
     "installer-name": "LocalPickup"
+  },
+  "config": {
+    "allow-plugins": {
+      "thelia/installer": true
+    }
   }
 }
